--- a/nessie-client/Cargo.toml
+++ b/nessie-client/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 reqwest = { version = "0.11", features = ["json", "blocking"] }
-iceberg = "0.4.0"
+iceberg = { version = "0.6.0", features = ["storage-s3", "storage-fs"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 thiserror = "1.0"
