--- a/nessie-iceberg-catalog/Cargo.toml
+++ b/nessie-iceberg-catalog/Cargo.toml
@@ -4,4 +4,4 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-iceberg = "0.4.0"
+iceberg = { version = "0.6.0", features = ["storage-s3", "storage-fs"] }
